# Gronchi_MOID

./: .gitignore  LICENSE  MANIFEST.in  README.md  gronchi_moid.py  pyproject.toml  setup.py
benchmarks/: bench.py
python/gronchi_moid/: __init__.py  _api.py  reference.py
src/: _core.cpp  linalg.hpp  moid.hpp  orbit.hpp  standish_earth.hpp
tests/: conftest.py  test_broadcasting.py  test_earth_api.py  test_known_cases.py  test_reference_parity.py  test_smoke.py
