[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "gronchi-moid"
version = "0.1.0"
description = "Fast vectorized Minimum Orbit Intersection Distance (MOID) for Keplerian orbits."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Siegfried Eggl" },
]
keywords = ["astronomy", "celestial mechanics", "MOID", "orbit", "Kepler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
test = ["pytest>=7"]
bench = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/mjuric/gronchi_moid"
Source = "https://github.com/mjuric/gronchi_moid"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
